crates/forge_app/src/snapshots/forge_app__tool_registry__all_rendered_tool_descriptions.snap
---
source: crates/forge_app/src/tool_registry.rs
expression: "all_descriptions.join(\"\\n---\\n\\n\")"
---
### read

Reads a file from the local filesystem.

- `file_path` must be absolute. Reads up to 2000 lines by default.
- Optional `range` for partial reads. Lines > 2000 chars truncated.
- Line numbers start at 1. Read multiple files in parallel for efficiency.
- .ipynb files read as JSON. Cannot read directories — use `shell` with `ls`.

---

### write

Writes a file to the local filesystem.

Usage:
- This tool will overwrite the existing file if there is one at the provided path.
- If this is an existing file, you MUST use the read tool first to read the file's contents and use this tool with 'overwrite' as true . This tool will fail if you did not read the file first or don't set overwrite parameter to true.
- ALWAYS prefer patch on existing files in the codebase. NEVER write new files unless explicitly required.
- NEVER proactively create documentation files (*.md) or README files. Only create documentation files if explicitly requested by the User.
- Only use emojis if the user explicitly requests it. Avoid writing emojis to files unless asked.

---

### fs_search

A powerful search tool built on ripgrep

Usage:
- ALWAYS use `fs_search` for search tasks. NEVER invoke `grep` or `rg` as a Bash command. The `fs_search` tool has been optimized for correct permissions and access.
- Supports full regex syntax (e.g., "log.*Error", "function\\s+\\w+")
- Filter files with glob parameter (e.g., "*.js", "**/*.tsx") or type parameter (e.g., "js", "py", "rust")
- Output modes: "content" shows matching lines, "files_with_matches" shows only file paths (default), "count" shows match counts
- Use Task tool for open-ended searches requiring multiple rounds
- Pattern syntax: Uses ripgrep (not grep) - literal braces need escaping (use `interface\\{\\}` to find `interface{}` in Go code)
- Multiline matching: By default patterns match within single lines only. For cross-line patterns like `struct \\{[\\s\\S]*?field`, use `multiline: true`

---

### sem_search

AI-powered semantic code search within /home/user/project. Finds code by natural language description, not exact strings.

**Use for:** Finding features, understanding architecture, discovering patterns, exploring unfamiliar code.
**Use `fs_search` instead for:** Exact strings, specific identifiers, regex patterns.

Tips: Use 2-3 varied queries. Be specific. Returns top-K file:line locations with context.

---

### remove

Request to remove a file at the specified path. Use when you need to delete an existing file. The path must be absolute. This operation can be undone using the `undo` tool.

---

### patch

Performs exact string replacements in files.
Usage:
- You must use your `read` tool at least once in the conversation before editing. This tool will error if you attempt an edit without reading the file. 
- When editing text from `read` tool output, ensure you preserve the exact indentation (tabs/spaces) as it appears AFTER the line number prefix. The line number prefix format is: 'line_number:'. Everything after that line_number: is the actual file content to match. Never include any part of the line number prefix in the old_string or new_string.
- ALWAYS prefer editing existing files in the codebase. NEVER write new files unless explicitly required.
- Only use emojis if the user explicitly requests it. Avoid adding emojis to files unless asked.
- The edit will FAIL if `old_string` is not unique in the file. Either provide a larger string with more surrounding context to make it unique or use `replace_all` to change every instance of `old_string`. 
- Use `replace_all` for replacing and renaming strings across the file. This parameter is useful if you want to rename a variable for instance.

---

### multi_patch

Multiple edits to a single file in one operation. Prefer over `patch` when making several changes.

- Edits applied sequentially. Atomic — all succeed or none applied.
- `old_string` must match file exactly. `replace_all` for renaming across file.
- Must read file first. Use absolute paths.
- For new files: first edit with empty `old_string`.

---

### undo

Reverts the most recent file operation (create/modify/delete) on a specific file. Use this tool when you need to recover from incorrect file changes or if a revert is requested by the user.

---

### shell

Executes shell commands. Defaults to `/home/user/project` if no `cwd` specified.

CRITICAL: This tool is for terminal operations only (git, npm, docker, cargo, make, etc.). DO NOT use it for file operations — use the dedicated tools instead. The dedicated tools have been optimized for correct permissions, access, and performance.

- Do NOT use `cd` in command string. Use `cwd` parameter instead.
- Quote file paths with spaces. Use `&&` for sequential, multiple calls for parallel.

NEVER use these commands — always use the dedicated tool instead:

- `find` → Use `fs_search` with `glob` or `output_mode: "files_with_matches"` to find files. The search tool respects .gitignore and has optimized file access.
- `grep` / `rg` → Use `fs_search` with `pattern` parameter to search file contents. Supports full regex, context lines, file type filtering.
- `cat` / `head` / `tail` → Use `read` to read file contents. Supports line ranges via `start_line`/`end_line`.
- `sed` / `awk` → Use `patch` or `multi_patch` to edit files. Supports string replacement and multi-edit operations.
- `echo` redirection (`>` / `>>`) → Use `write` to create or overwrite files.

Output truncated at 200 prefix/200 suffix lines. Full output in temp file. Returns stdout, stderr, and exit code.

---

### fetch

Retrieves content from URLs as markdown or raw text. Handles HTTP/HTTPS, converts HTML to markdown. For large pages, returns first 40K chars and stores full content in temp file.

Text-based content only. For binary downloads, use `shell` with `curl -fLo <output_file> <url>`.

---

### followup

Use this tool when you encounter ambiguities, need clarification, or require more details to proceed effectively. Use this tool judiciously to maintain a balance between gathering necessary information and avoiding excessive back-and-forth.

---

### plan

Creates a new plan file with the specified name, version, and content. Use this tool to create structured project plans, task breakdowns, or implementation strategies that can be tracked and referenced throughout development sessions.

---

### skill

Fetches detailed information about a specific skill. Use this tool to load skill content and instructions when you need to understand how to perform a specialized task. Skills provide domain-specific knowledge, workflows, and best practices. Only invoke skills that are listed in the available skills section. Do not invoke a skill that is already active.

---

### todo_write

Manage a structured task list for the current coding session.

Each call sends only changed items. Each item requires `content` (unique key) and `status` (`pending`|`in_progress`|`completed`|`cancelled`).

**Rules:**
- New content → added. Existing content → status updated. `cancelled` → removed. Unmentioned → unchanged.
- Only ONE task `in_progress` at a time.
- Mark `in_progress` BEFORE starting. Mark `completed` IMMEDIATELY after finishing.
- Do NOT mark `completed` if tests fail, implementation partial, or errors unresolved.

**When to use:** Complex multi-step tasks (3+ steps), user provides multiple tasks, explicit request for todo list.

**When NOT to use:** Single trivial task, conversational/informational requests.

---

### todo_read

Retrieves the current todo list. Use before `todo_write` to check existing tasks, or to review progress.

---

### task

Launch a specialized agent to handle complex tasks autonomously.

Available agents:
- **debug**: Specialized in debugging issues
  - Tools: read, shell, fs_search, sem_search, fetch
- **sage**: Specialized in researching codebases
  - Tools: read, fs_search, sem_search, fetch

- Specify `agent_id` to select agent type. Provide detailed task descriptions.
- Launch multiple agents concurrently with multiple tool calls.
- Agents can be resumed via `session_id` for follow-up work.
- Do NOT use for simple lookups — use `read` or `fs_search` directly.
