crates/forge_app/src/snapshots/forge_app__tool_registry__dynamic_tool_description_with_vision_model.snap
---
source: crates/forge_app/src/tool_registry.rs
expression: read_tool.description
---
Reads a file from the local filesystem.

- `file_path` must be absolute. Reads up to 2000 lines by default.
- Optional `range` for partial reads. Lines > 2000 chars truncated.
- Line numbers start at 1. Read multiple files in parallel for efficiency.
- Supports images (PNG, JPG) and PDFs (base64 encoded, max 5000 bytes).
- .ipynb files read as JSON. Cannot read directories — use `shell` with `ls`.
